--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # TODO: add papers by configuration file
 base_url: "https://arxiv.paperswithcode.com/api/v0/papers/"
-user_name: "Vincentqyw"
+user_name: "zhangshaolei1998"
 repo_name: "cv-arxiv-daily"
 show_authors: True
 show_links: True
@@ -22,18 +22,15 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
-    "SLAM": 
-        filters: ["SLAM", "Visual Odometry"]
-    "SFM":
-        filters: ["SFM", "Structure from Motion"]
-    "Visual Localization":
-        filters: ["Visual Localization","Camera Localization",
-                  "Camera Re-localisation","Loop Closure Detection",
-                  "visual place recognition","image retrieval"]
-    "Keypoint Detection":
-        filters: ["Keypoint Detection", "Feature Descriptor"]
-    "Image Matching":
-        filters: ["Image Matching", "Keypoint Matching", 
-                  "Line Segment Detection", "Local Feature Matching"]
-    "NeRF":
-        filters: ["NeRF"]
+    "Simultaneous Translation": 
+        filters: ["Simultaneous Translation","Simultaneous Machine Translation","Simultaneous Speech Translation","Streaming Speech Translation", "Streaming ASR","Streaming Automatic Speech Recognition",,"Streaming Speech Recognition", "Streaming Translation", "Simultaneous Generation"]
+    "Language Model":
+        filters: ["LLM", "Language Model"]
+    "Machine Translation":
+        filters: ["Machine Translation"]
+    "Speech Translation":
+        filters: ["Speech Translation"]
+    "Speech":
+        filters: ["Speech"]
+    "Hallucination":
+        filters: ["Hallucination"]
